<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thin_white"
    android:orientation="vertical"
    tools:context="com.example.everyoneassist.Fragment.MeFragment">

    <com.example.everyoneassist.Layout.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme"
        android:gravity="center_vertical">

        <com.example.everyoneassist.View.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:src="@mipmap/ic_launcher"
            app:border_color="@color/white"
            app:border_width="3dp"
            app:layout_heightPercent="20%w"
            app:layout_marginLeftPercent="10%w"
            app:layout_widthPercent="20%w" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="风一样的男人"
                android:textColor="@color/thin_white"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID:008652"
                android:textColor="@color/thin_white"
                android:textSize="@dimen/text_normal" />

        </LinearLayout>

    </com.example.everyoneassist.Layout.PercentLinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/my_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_order"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

        <TextView
            android:id="@+id/demand_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_demand"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

        <TextView
            android:id="@+id/skill_manager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_skill"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/my_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_wallet"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

        <TextView
            android:id="@+id/person_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_auth"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

        <TextView
            android:id="@+id/my_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_collect"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

        <TextView
            android:id="@+id/user_manual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_use_manual"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/system_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="22dp"
            android:paddingTop="8dp"
            android:text="@string/me_system_setting"
            android:textSize="@dimen/text_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@color/thin_white" />

    </LinearLayout>

</LinearLayout>
