<?xml version="1.0" encoding="utf-8"?>
<com.example.everyoneassist.Layout.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.everyoneassist.Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/left_black_24dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_login"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sbig" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="1dp"
        android:background="@color/thin_white" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_are"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/phone_tips"
            android:inputType="number"
            android:text="15827991714"
            android:textColorHint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/deep_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/text_normal" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:inputType="textPassword"
            android:text="123456"
            android:background="@android:color/transparent"
            android:hint="@string/password_tips"
            android:textColorHint="@color/gray" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/deep_gray" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/theme_login_bg"
        android:textSize="@dimen/text_sbig"
        app:layout_marginTopPercent="10%h"
        android:layout_margin="15dp"/>

    <com.example.everyoneassist.Layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.everyoneassist.Layout.PercentLinearLayout
            android:id="@+id/bottom_3login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginBottomPercent="15%h"
            app:layout_widthPercent="40%w"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="QQ登录"
                android:gravity="center"
                android:layout_gravity="left"
                android:textSize="@dimen/text_normal"
                android:drawableTop="@mipmap/registered_11"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="QQ登录"
                android:gravity="center"
                android:layout_gravity="right"
                android:textSize="@dimen/text_normal"
                android:drawableTop="@mipmap/registered_13"
                android:id="@+id/textView" />

        </com.example.everyoneassist.Layout.PercentLinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_3login"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            app:layout_marginBottomPercent="5%h">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="没有账号？"
                android:textSize="@dimen/text_normal" />

            <TextView
                android:id="@+id/registered_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请注册"
                android:textColor="@color/theme"
                android:textSize="@dimen/text_normal" />

        </LinearLayout>


    </com.example.everyoneassist.Layout.PercentRelativeLayout>

</com.example.everyoneassist.Layout.PercentLinearLayout>